# Project_Training

./: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
app/: __init__.py  config.py  exception_handlers.py  schemas.py
app/controllers/: __init__.py  auth.py  events.py  feedback.py  index.py  places.py  records.py  reviews.py  user.py  users.py
app/db/: connection.py  exceptions.py  models.py
app/db/migrations/: 001_create_tables.sql
app/db/repositories/: event.py  place.py  record.py  review.py  user.py
app/static/: script.js  sdd.css  styles.css
app/templates/: auth.html  base.html  content.html  dashboard.html  error.html  index.html  login.html  register.html
app/templates/events/: create.html  edit.html  event.html  event_list.html  events.html  record_list.html
app/templates/events/reviews/: review.html
app/templates/feedback/: feedbacks.html
app/templates/places/: create.html  edit.html  place.html  place_list.html  places.html
app/templates/review/: create.html  edit.html  review.html  review_list.html  reviews.html
app/templates/reviews/: review_list.html
app/templates/users/: create.html  edit.html  user.html  user_list.html  users.html
doc/: TechTask.wsd  erd.drawio  index.rst
