[tool.poetry]
name = "comedy-app"
version = "0.1.0"
description = ""
authors = ["Hugglet <sashok.petrushin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
flask-pydantic = "^0.12.0"
psycopg2 = "^2.9.10"
flask-jwt-extended = "^4.7.1"
bootstrap-flask = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
